# running_ui

./: .gitignore  CMakeLists.txt  README.md
include/: MainWindow.h  TrackWidget.h
src/: MainWindow.cpp  TrackWidget.cpp  main.cpp
